<resources>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_signUp">Sign Up</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>

    <!-- menu -->
    <string name="wish_label">Cast A Wish</string>
    <string name="tops_label">Tops</string>
    <string name="bottoms_label">Bottoms</string>
    <string name="account_label">My Account</string>
    <string name="your_favourite">Your Favourite</string>
    <string name="house_helper">House Helper</string>
    <string name="shelter_statistics">Shelter Statistics</string>
    <string name="sign_out">Sign Out</string>

    <string name="app_name">Shelter</string>

    <!-- Title text for the empty view, which describes the empty  house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit cold here…</string>
    <string name="empty_view_subtitle_text">… there are no shelter available for your wish</string>
    <string name="load_image_failure"> Error with loading image Uri</string>
    <string name="not_for_rent">Not rent</string>
    <string name="not_for_sale">Not sale</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="income">Income</string>
    <string name="back">Back</string>
    <string name="error_confirm_password">Not match password</string>
    <string name="name_error_check">Name must not be empty</string>
    <string name="email_error_check">Email is not valid</string>
    <string name="phone_error_check">Phone number must be above 9 digits</string>
    <string name="date_birth_error_check">Date format is not valid</string>
    <string name="income_error_check">Income must be above 0</string>
    <string name="error_saving_user_account">Error at saving you account, please check the network</string>
    <string name="sign_up_successfully">Welcome you to Shelter</string>
    <string name="verify">Verify</string>
    <string name="your_verify_code">Your verify code</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="phone_already_exists">Phone already exists</string>
    <string name="phone_does_not_exists">Phone does not exists</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="verify_code_is_not_valid">Verify code is not valid</string>
    <string name="phone_is_not_valid">Phone number format is not valid.</string>
    <string name="more_detail_house">Kí túc sá trường đại học quốc gia hà nội với khuông viên rộng lớn, thoải mái dư sức chạy nhảy:\nPhòng 3 người: 2Tr/Thang \nPhòng 6 người: 800Ng/Tháng</string>
    <string name="more_detail">More detail</string>
    <string name="address">Address</string>
    <string name="send_contact">Send Contact</string>
    <string name="sale_only">Sale only</string>
    <string name="rent_only">Rent only</string>
    <string name="distance_from_you">Distance: </string>
    <string name="area">Area: </string>
    <string name="unabale_to_locate_user_location">Unable to locate your location, please check your network and restart application</string>
    <string name="send_contact_buton_press">House\'s owner have received your email and phone number. They will respond to you soon!</string>
    <string name="contact_sent">Contact\'s sent</string>
    <string name="contact_sent_press">Your contact has already sent to house\'s owner. Please wait for them to respond!</string>
    <string name="verify_time_out">Time out, if you have not received verify code we sent, please check your network and click next again</string>
    <string name="feedback">FeedBack</string>
    <string name="house_recommender">House Recommender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place">Place</string>
    <string name="house_type">House Type</string>
    <string name="year_built">Year built</string>
    <string name="floor">Floor</string>
    <string name="bed_rooms">Bed rooms</string>
    <string name="bath_rooms">Bath rooms</string>
    <string name="locate_your_wishful_point">Locate your wishful point</string>
    <string name="sale_price">Sale price</string>
    <string name="cast_your_wish">Cast your wish</string>
    <string name="rent_cost">Rent cost</string>
    <string name="this_place_need_a_name">This place need a name</string>
    <string name="here">HERE</string>
    <string name="give_this_place_a_name">Give this place a name</string>
    <string name="place_s_name">Place name</string>
    <string name="number_of_bed_rooms">Number of bed rooms: </string>
    <string name="num_of_bath_rooms">\nNumber of bath rooms: </string>
    <string name="num_of_floors_floor">\nNumber of floors | floor: </string>
    <string name="_year_built">\nYear built: </string>
    <string name="_yard_size">\nYard size: </string>
    <string name="_place">\nPlace: </string>
    <string name="unlocatable">Unlocatable</string>
    <string name="order_by_price">Order by price</string>
    <string name="order_by_name">Order by name</string>
    <string name="expire_wish">Expire wish</string>
    <string name="search">Search</string>
    <string name="locate_your_house">Locate your house</string>
    <string name="update">Update</string>
    <string name="redo">Redo</string>
    <string name="yard_size">Yard size</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="house_name">House name</string>
    <string name="house_name_null_check">House name must not null</string>
    <string name="house_area_check">House\'s area must not null</string>
    <string name="house_floor_check">Floor of the house must not null</string>
    <string name="address_house_check">Please locate house address on map</string>
    <string name="price_house_check">Please set sale price for the house</string>
    <string name="bed_rooms_house_check">Bed rooms must be not null</string>
    <string name="bath_rooms_house_check">Bath rooms must be not null</string>
    <string name="set_land_mark_tower_default_location">Unable to get your location, we set LandMark Tower at default location</string>
    <string name="this_place_need_an_address">This place need an address</string>
    <string name="check_year_built_house"><![CDATA[\"Invalid year. Year should be > 1960 and < \"]]></string>
    <string name="default_value_place">Khác</string>
    <string name="default_value_house_type">Nhà Trọ</string>
    <string name="close_house_dialog">Are you sure want to close this house? If yes, then this house will close in 30 days. After that it will delete automatically. Latter if you want to open this house again, make sure you do before that happens.</string>
    <string name="open_house_dialog">This house will be opened to the viewers and buyers?</string>
    <string name="contact_solve">SOLVE</string>
    <string name="contact_solved">contacts solved</string>
    <string name="contacts_alive">contacts alive</string>
    <string name="delete_contact_warning">Do you want to delete this contact?</string>
    <string name="contacts_manager">Contacts Manager</string>
    <string name="solved">SOLVED</string>
    <string name="privacy_terms">Privacy terms</string>
    <string name="alert_item_1">Images in advertise are not as same as reality</string>
    <string name="alert_item_2">House\'s information is not reliable</string>
    <string name="alert_item_3">The price is not fit</string>
    <string name="contact_alert_house_owner">You are this house owner, can\'t send contact to yourself!</string>
    <string name="close_house_alert">This house is close or delete by its owner</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="reporting_house">Reporting house</string>
    <string name="report_house_sucess">We have received your report. Thanks for your help!</string>
    <string name="yes">Yes</string>
    <string name="house_already_closed">This house is already closed</string>
    <string name="house_already_opened">This house is already opened</string>
    <string name="more_info_place_holder">We strongly recommend you put your phone number in this field</string>
    <string name="call_me_at_">Call me at this phone number</string>
    <string name="house_content">House content</string>
    <string name="term_privacy">Privacy Policy for Shelter</string>
    <string name="bar_chart_description_count_wish">Number of wishes that cast house types</string>
    <string name="reset_password">Reset password</string>
    <string name="google_sign_in_failed">Google sign in failed, please check your network and try again!</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="change">CHANGE</string>
    <string name="new_houses">New houses</string>
    <string name="hot_houses">Hot houses</string>
    <string name="redo_alert">Are you sure want to redo all the change?</string>


</resources>
