<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/shr_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/cheaper"
        android:title="@string/order_by_price"
        app:showAsAction="never" />
    <item
        android:id="@+id/name_a_z"
        android:title="@string/order_by_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/expire_wish"
        android:title="@string/expire_wish"
        app:showAsAction="never" />
</menu>
