<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CastAWishFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:contentPadding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/place_text_input"
                    style="@style/Widget.Shelter.DropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place"
                    app:errorEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/place_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_value_place"
                        android:enabled="false"
                        android:inputType="none"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/house_type_text_input"
                    style="@style/Widget.Shelter.DropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_type"
                    app:errorEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/house_type_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/default_value_house_type"
                        android:inputType="none"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/area_text_input"
                        style="@style/Widget.Shelter.TextInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/area"
                        android:paddingEnd="6dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/area_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/yearbuilt_text_input"
                        style="@style/Widget.Shelter.TextInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/year_built"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/yearbuilt_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/floor_text_input"
                        style="@style/Widget.Shelter.TextInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:hint="@string/floor"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/floor_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bedrooms_text_input"
                        style="@style/Widget.Shelter.TextInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:hint="@string/bed_rooms"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bedrooms_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bathrooms_text_input"
                        style="@style/Widget.Shelter.TextInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/bath_rooms"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bathrooms_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wishful_point_text_input"
                    style="@style/Widget.Shelter.TextInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/locate_your_wishful_point"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/outline_place_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/wishful_point_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="textAutoComplete" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sale_price_text_input"
                    style="@style/Widget.Shelter.TextInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sale_price"
                    app:errorEnabled="true"
                    app:suffixText=".000.000 VNĐ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sale_price_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rent_cost_text_input"
                    style="@style/Widget.Shelter.TextInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rent_cost"
                    app:errorEnabled="true"
                    app:suffixText=".000.000 VNĐ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rent_cost_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/next_button"
                        style="@style/Widget.Shelter.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/cast_your_wish" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/back_button"
                        style="@style/Widget.Shelter.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/next_button"
                        android:text="@string/back" />
                </RelativeLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </ScrollView>

</FrameLayout>
